# metalarb

./: .gitignore  README.md  app.py  pyproject.toml
config/: assumptions.yaml
src/metalarb/: __init__.py  arb_lme_comex.py  arb_lme_shfe.py  cli.py  conversions.py  costs.py  models.py  scenarios.py  timeseries.py
src/metalarb/ingest/: __init__.py  fetchers.py  store.py
tests/: conftest.py  test_arb_lme_comex.py  test_arb_lme_shfe.py  test_cli.py  test_conversions.py  test_costs.py  test_dashboard.py  test_fetchers.py  test_scenarios.py  test_store.py  test_timeseries.py
