[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metalarb"
version = "0.1.0"
description = "Landed-cost physical copper arbitrage calculator across LME, COMEX and SHFE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
metalarb = "metalarb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/metalarb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=metalarb --cov-report=term-missing"

[tool.coverage.run]
source = ["metalarb"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
